# HITSZ-COMP3010-MealOrderSystem

./: CMakeLists.txt  account_manage_widget.cpp  account_manage_widget.h  account_manage_widget.ui  biz_manage_widget.cpp  biz_manage_widget.h  biz_manage_widget.ui  biz_manager_manage_biz_manager_widget.cpp  biz_manager_manage_biz_manager_widget.h  biz_manager_manage_biz_manager_widget.ui  biz_manager_manage_meal_widget.cpp  biz_manager_manage_meal_widget.h  biz_manager_manage_meal_widget.ui  biz_manager_manage_order_widget.cpp  biz_manager_manage_order_widget.h  biz_manager_manage_order_widget.ui  biz_manager_manage_widget.cpp  biz_manager_manage_widget.h  biz_manager_manage_widget.ui  buzzing_widget.cpp  buzzing_widget.h  canteen_manage_widget.cpp  canteen_manage_widget.h  canteen_manage_widget.ui  canteen_manager_manage_biz_widget.cpp  canteen_manager_manage_biz_widget.h  canteen_manager_manage_biz_widget.ui  canteen_manager_manage_canteen_manager_widget.cpp  canteen_manager_manage_canteen_manager_widget.h  canteen_manager_manage_canteen_manager_widget.ui  canteen_manager_manage_widget.cpp  canteen_manager_manage_widget.h  canteen_manager_manage_widget.ui  canteen_manager_manage_window_widget.cpp  canteen_manager_manage_window_widget.h  canteen_manager_manage_window_widget.ui  courier_manage_order_widget.cpp  courier_manage_order_widget.h  courier_manage_order_widget.ui  destination_manage_widget.cpp  (+44 more)
dao/: account_dao.cpp  account_dao.h  biz_dao.cpp  biz_dao.h  biz_manager_dao.cpp  biz_manager_dao.h  canteen_dao.cpp  canteen_dao.h  canteen_manager_dao.cpp  canteen_manager_dao.h  courier_dao.cpp  courier_dao.h  order_dao.cpp  order_dao.h  result.h  user_dao.cpp  user_dao.h
